syntax = "proto3";

package products;

service ProductsService {
  rpc FindOne (ProductRequest) returns (ProductResponse) {}
  rpc ValidateStock (StockRequest) returns (StockResponse) {}
}

message ProductRequest {
  string id = 1;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  float price = 3;
  int32 stock = 4;
}

message StockRequest {
  string id = 1;
  int32 quantity = 2;
}

message StockResponse {
  bool available = 1;
}
